Closed Bug 1694017 Opened 5 years ago Closed 5 years ago

[NSFW] Scrolling on a NSFW reddit page is bad with the Reddit New Design, and the "Safe browsing mode" enabled

Categories

(Core :: Graphics: WebRender, defect)

All
Windows 10
defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox87 --- fixed
firefox88 --- fixed

People

(Reporter: mayankleoboy1, Assigned: lsalzman)

References

(Depends on 1 open bug, Blocks 3 open bugs, )

Details

Attachments

(4 files)

STR:
0: Enable SW-WR

  1. Set the new design of Reddit as default
  2. Enable the "Safe Browsing Mode" on Reddit. (On reddit, click on the username on top right->User Settings->Feed Settings->Safe Browsing Mode-> Enable)
  3. Go to a NSFW page like this : https://www.reddit.com/user/eat_a_p3ach/
    3.5 Optional : Wait for 1 minute to let the GC/CC do its thing
  4. Put the mouse cursor on one of the images/videos of the feed, an start scrolling down.

ER: Smooth scrolling
AR: Choppy scrolling

"Safe Browsing" on : https://share.firefox.dev/3ulDvZC
"Safe Browsing" off : https://share.firefox.dev/3bowH54

I have filed this separately from bug 1685848 as the difference in performance with SWWR is much more stark compared to HWWR.

Blocks: sw-wr-perf
See Also: → 1685848
No longer depends on: 1685848
No longer depends on: 1397444, 1671490

The time looks like it is spent most in brush_blend, brush_image_ADVANCED_BLEND, and cs_scale_TEXTURE_2D (apparently doing a downscale in blendTextureLinearFallback?).

In addition to the bad performance I also see artifacting in the blurred area.

Turning off the two blur filters makes a big difference.
Before: https://share.firefox.dev/3aDOsho
After: https://share.firefox.dev/37C0lm5

The way the blurring is implemented is very weird. It seems like there are two <img> each of which point at an image that has been blurred on the server side and then further blurred on the client side. The bottom image has filter: blur(20px) brightness(.8); and the top image has filter: blur(60px);

I actually see the artifacts with hardware webrender too.

Depends on: 1694508
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ae5b26d89bf1 Accelerate 2x downscaling in SWGL. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch

Comment on attachment 9205164 [details]
Bug 1694017 - Accelerate 2x downscaling in SWGL. r?jrmuizel

Beta/Release Uplift Approval Request

  • User impact if declined: Trying to do partial SW-WR rollout on Linux. Would like to avoid people reporting significant performance regressions months down the line. This will avoid slowdowns in sites that use blur filters.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Only impacts SW-WR/Linux. We can abort the rollout if unstable. Adequate time to deal with any bugs.
  • String changes made/needed:
Attachment #9205164 - Flags: approval-mozilla-beta?

Comment on attachment 9205164 [details]
Bug 1694017 - Accelerate 2x downscaling in SWGL. r?jrmuizel

Approved for 87.0b4.

Attachment #9205164 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: