Bug 1694017 - Accelerate 2x downscaling in SWGL. r=jrmuizel, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D106302